<resources>
    <string name="app_name">MySIS</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_are_eligible_sulabh_loan">You are eligible now to apply for sulabh loan</string>
    <string name="enter_amount">Enter amount</string>
    <string name="sulabh_loan">Sulabh Loan</string>
    <string name="request_sent_successfully">Request sent successfully!</string>
    <string name="puspose_loan">Puspose of loan</string>
    <string name="loan_amount">Loan amount</string>
    <string name="loan_requested">Loan Requested!</string>
    <string name="processing">Processing</string>
    <string name="our_team_will">Our team will contact you after completing</string>
    <string name="new_kit_due">New kit due on</string>
    <string name="kit_recieve">Kit recieve on</string>
    <string name="no_logo_submited">No logoes submitted</string>
    <string name="submit_logo">Submit logo from your old uniforms and</string>
    <string name="how_to_submit">HOW TO SUBMIT?</string>
    <string name="unable_sync_data">Unable to sync data. Last Synced 4 hours ago</string>
    <string name="post_id">Post ID</string>
    <string name="post_rank">Post Rank</string>
    <string name="leave_for">Leave For</string>
    <string name="trying_to_sync">Trying to sync data</string>
    <string name="day_monday">M</string>
    <string name="day_tuesday">T</string>
    <string name="day_wednesday">W</string>
    <string name="employee_not_found">Employee not found on device and Server.</string>
    <string name="day_thursday">T</string>
    <string name="day_friday">F</string>
    <string name="day_saturday">S</string>
    <string name="day_sunday">S</string>
    <string name="all">All</string>
    <string name="present">Present</string>
    <string name="post">Post Name : </string>
    <string name="retake">RETAKE</string>
    <string name="submit">SUBMIT</string>
    <string name="extra_duty">Extra Duty</string>
    <string name="duty_in">Duty In</string>
    <string name="mark_attendance_txt">Mark Attendance</string>
    <string name="duty_txt">Duty</string>
    <string name="calendar_txt">Calendar</string>
    <string name="menu_txt">Menu</string>
    <string name="duty_out">Duty Out</string>
    <string name="other_duty_txt">Other Duty</string>
    <string name="current_duty_txt">Current Duty</string>
    <string name="shift_a_txt">Shift A</string>
    <string name="sbi_bank_txt">SBI Bank</string>
    <string name="leave_txt">Leave</string>
    <string name="day_txt">1 Day</string>
    <string name="confirm_txt">Confirm</string>
    <string name="sick_txt">Sick</string>
    <string name="family_emergency_txt">Family Emergency</string>
    <string name="other_reason_txt">Other Reason</string>
    <string name="reason_for_leaves_txt">Reason For Leaves :</string>
    <string name="sign_in">Sign In</string>
    <string name="next">Next</string>
    <string name="change">CHANGE</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="enter_Registration_no">Enter Registration No</string>
    <string name="sign_using_registration">Sign In Using Registration No.</string>
    <string name="confirm">Confirm</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="set_pin">set pin</string>
    <string name="Enter_pin">Enter pin</string>
    <string name="otp_msg">Enter the verification code we just sent you on your mobile number</string>
    <string name="set_password">Set Password</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="password_note">Password should be between 4 to 10 characters</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_msg">Enter a Password to login with mobile no.</string>
    <string name="sign_in_through_otp">SIGN IN THROUGH OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_msg">Enter the verification code we just sent you</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="badges">Badges</string>
    <string name="rating">Rating</string>
    <string name="security">Security</string>
    <string name="contact">Contact Number</string>
    <string name="your_badges">Your Badges</string>
    <string name="go_to_top">Go To TOP</string>
    <string name="punctual">Punctual</string>
    <string name="punctual_bdage">Punctual Badge</string>
    <string name="check_in_bedge">10 Day early check-in bedge</string>
    <string name="next_bdge">Next Badge in 8 Days</string>
    <string name="check_in_twenty_min">Check in 20 minutes before the check-in times to earn this badge</string>
    <string name="bank_account">Bank Account</string>
    <string name="document">Document</string>
    <string name="profile">Profile</string>
    <string name="your_badge">Your Badges</string>
    <string name="badge_you_can_earn">Badges you can earn</string>
    <string name="click_on_badge">Click on badges to know more</string>
    <string name="discipline">Discipline</string>
    <string name="team_work">Team Work</string>
    <string name="alert">Alert</string>
    <string name="hero">Hero</string>
    <string name="theft">Theft</string>
    <string name="unearned">Unearned Badge</string>
    <string name="raise_a_request">RAISE A REQUEST</string>
    <string name="enter_new_mobile_number">Enter New Mobile No.</string>
    <string name="done">DONE</string>
    <string name="request_raise_successfully">Request raise successfully</string>
    <string name="change_contact_number">Change contact number</string>
    <string name="change_pin">Change PIN</string>
    <string name="enter_current_pin">Enter Current PIN</string>
    <string name="enter_current_pin_for_mobile">Enter cureent PIN for the mobile number</string>
    <string name="forget_current_pin">FORGET CURRENT PIN</string>
    <string name="notification">Notification</string>
    <string name="mark_duty_rejected">Marked Duty Rejected</string>
    <string name="back">Back</string>
    <string name="raise_concern">RAISE A CONCERN</string>
    <string name="call_supervisor">CALL SUPERVISOR</string>
    <string name="duty_in_time">In Time:</string>
    <string name="duty_out_time">Out Time:</string>
    <string name="lat_lang">Lat, Long</string>
    <string name="security_pin_change">Security changed PIN successfully ! </string>
    <string name="help">Help</string>
    <string name="faq">FAQs</string>
    <string name="tour">Tour</string>
    <string name="grievance">Grievance</string>
    <string name="contact_us">Contact us</string>
    <string name="view_more">View more</string>
    <string name="please_wait">Please Wait</string>
    <string name="ok">Ok</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="internet_connection">No internet Connection</string>
    <string name="mobile_number_Valid">Please enter 10 digit number</string>
    <string name="Registration_number_Valid">Please enter 9 digit number</string>
    <string name="valid_password">Enter Valid Password</string>
    <string name="valid_OTP">Enter Valid OTP</string>
    <string name="valid_PIN">Enter Valid pin</string>
    <string name="valid_Number">Please enter number</string>
    <string name="inValid_Number">Invalid Mobile number</string>
    <string name="valid_OTP_digit">Enter 4 digit Number</string>
    <string name="resend_OTP">Resend otp</string>
    <string name="Cancel">Cancel</string>
    <string name="no_shift_for_today_in_Roster">There is no Roster for today.Contact to Admin.</string>
    <string name="permission_setting">Settings</string>
    <string name="permission_cancel">Cancel</string>
    <string name="permission_ensure">Grant</string>
    <string name="permission_title">Please allow Permissions</string>
    <string name="Permission_message">We need access to Phone call,Location,Storage and Camera,Otherwise you will not be able to use
        Application.</string>
    <string name="error_with_face_detection">Error with face detection</string>
    <string name="face_detected_message">Face is detected</string>
    <string name="face_detected_then_lost_message">Face is not detected </string>
    <string name="attendance_not_marked">Your Attendance not marked for today!</string>
    <string name="fit_face_in_circle">Fit your face in circle</string>
    <string name="duty_out_successfully">Duty Out Marked successfully!</string>
    <string name="duty_In_successfully">Duty In Marked successfully!</string>
    <string name="scan_QRCode_BY_IDCard">Scan QR code by ID card</string>
    <string name="not_able_scan">Not able to scan ?</string>
    <string name="enter_Manually">Enter Manually</string>
    <string name="scan_by_qrcode">Scan  QR code</string>
    <string name="enter_emp_no">Enter Employee no</string>
    <string name="enter_Contact_no">Enter Mobile No</string>
    <string name="enter_new_pin">Enter New PIN</string>
    <string name="enter_below_message_pin">Enter New PIN for mobile no.</string>
    <string name="enter_below_message_set_pin">Set 4 digit PIN for your MySIS security</string>
    <string name="not_match">Not match.Please enter valid PIN,</string>
    <string name="forget_pin">Forget PIN</string>
    <string name="single_day">Single Day</string>
    <string name="multiple_day">Multiple Day</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="leave_request">Leave Request</string>
    <string name="working_since">Years with</string>
    <string name="guard">Guard -</string>
    <string name="reg_no"> using Reg no</string>
    <string name="by_mobile_no">Sign In using mobile no.</string>
    <string name="already_puch_duty_in">Your duty in detail not found for duty out.</string>
    <string name="NOt_MARK_DUTY_TODAY">No duty IN found for today.</string>
    <string name="reg_number">Reg NO</string>
    <string name="good_day">Good day !</string>
    <string name="good_bye">Good Bye !</string>
    <string name="leave_assign_for_day">Leave already for that day.Please select another date for Leave.</string>
    <string name="past_date_not_raise_Leave">Leave not create for past date.</string>
    <string name="leavehistory">Leave History</string>
    <string name="leave">Leave</string>
    <string name="continue_tolocation_qr_scan">Continue to location QR code scan.</string>
    <string name="term_and_conditions">Terms of Service and Policy</string>
    <string name="term_cond_content">We understand the nature and sensitivity of your personal data and have taken strong measures to ensure that your data is not compromised.</string>
    <string name="device_location">Device Location</string>
    <string name="device_location_content">It is recommended to set your location sharing as \'Always\'.</string>
    <string name="sms">SMS</string>
    <string name="sms_content">It is recommended to permit access of messages to MySIS.</string>
    <string name="camera">Camera</string>
    <string name="camera_content">It is recommended to permit access of mobile device camera to MySIS.</string>
    <string name="contact_content">It is recommended to permit access of your mobile device contact list to MySIS.</string>
    <string name="contacts">Contacts</string>
    <string name="i_agree">I agree</string>
    <string name="salary_credited_to_account">Salary Credited for December 2020!</string>
    <string name="salary_credited_details">Your salary has been credited. Please check your account balance. Also, you can download salary receipt now!</string>
    <string name="txt_view">View</string>
    <string name="leave_appl_status">Leave Application Status</string>
    <string name="click_here_apply_leave">Click here to Apply for leave</string>
    <string name="txt_leave">Leave</string>
    <string name="leave_record">Leave Records</string>
    <string name="apply_for_leave">Apply For Leave</string>
</resources>