<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_dp">

            <ImageView
                android:id="@+id/icon_back_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_back_arrow"
                android:tint="@color/redPrimaryDarkColor"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_toRightOf="@id/icon_back_arrow"
                android:text="@string/txt_leave"
                android:textColor="@color/black"
                android:textSize="@dimen/fourteen_sp" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/relative"
            android:layout_marginTop="@dimen/eightyDP"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/twentyDP"
                android:background="@drawable/background_border_red_app_bg"
                android:text="@string/apply_for_leave"
                android:textColor="@color/white" />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/twentyDP"
                android:background="@drawable/background_border_red_app_bg"
                android:text="@string/leave_appl_status"
                android:textColor="@color/white"

                />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/twentyDP"
                android:background="@drawable/background_border_red_app_bg"
                android:text="@string/leave_record"
                android:textColor="@color/white" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mark_atten_op_bg"
            android:gravity="center_horizontal|center">


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:background="@drawable/background_border_red_app_bg"
                />




            <TextView
                style="@style/mediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mark_duty_bg"
                android:text="@string/click_here_apply_leave"
                android:textColor="@color/white"
                android:textSize="@dimen/twentyDP"
                android:paddingLeft="@dimen/fifteen_dp"
                android:paddingRight="@dimen/fifteen_dp"
                android:paddingTop="@dimen/ten_dp"
                android:paddingBottom="@dimen/ten_dp"
                />


        </RelativeLayout>
    </FrameLayout>


    <include layout="@layout/layout_bottom_step"/>


</RelativeLayout>
