<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/previous_month_iv"
            android:layout_width="@dimen/fourty_twoDp"
            android:layout_height="@dimen/fourty_twoDp"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/ten_dp"
            android:src="@drawable/icon_back_arrow" />

        <TextView
            android:id="@+id/month_name_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="Nov, 2019"
            android:textColor="#C33235"
            android:textAllCaps="true"
            android:textSize="@dimen/twentyDP"
            style="@style/regularText"
            />

        <ImageView
            android:id="@+id/next_month_iv"
            android:layout_width="@dimen/fourty_twoDp"
            android:layout_height="@dimen/fourty_twoDp"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/ten_dp"
            android:src="@drawable/icon_back_arrow" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_left_10dp"
        android:layout_marginRight="@dimen/ten_dp"
        app:cardCornerRadius="@dimen/fiveDp"
        app:cardElevation="@dimen/ten_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:weightSum="7">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/day_monday"
                    style="@style/regularText"
                    android:textColor="@color/day_txt_color"
                    android:textSize="@dimen/fortten_sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/day_tuesday"
                    style="@style/regularText"
                    android:textColor="@color/day_txt_color"
                    android:textSize="@dimen/fortten_sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/day_wednesday"
                    style="@style/regularText"
                    android:textColor="@color/day_txt_color"
                    android:textSize="@dimen/fortten_sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/day_thursday"
                    style="@style/regularText"
                    android:textColor="@color/day_txt_color"
                    android:textSize="@dimen/fortten_sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/day_friday"
                    style="@style/regularText"
                    android:textColor="@color/day_txt_color"
                    android:textSize="@dimen/fortten_sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/day_saturday"
                    style="@style/regularText"
                    android:textColor="@color/day_txt_color"
                    android:textSize="@dimen/fortten_sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/day_sunday"
                    style="@style/regularText"
                    android:textColor="@color/day_txt_color"
                    android:textSize="@dimen/fortten_sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/oneDp"
                android:background="@color/white_background"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calenderRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                tools:listitem="@layout/calendar_singal_day_layout" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>